# Internal-management-system

./: .env.prod.example  .gitignore  LICENSE  README.md  README_CN.md  docker-compose.yml  企业内部管理系统详细设计方案.md
backend/: .dockerignore  .env.example  Dockerfile  README.md  pyproject.toml
backend/alembic/: env.py
backend/alembic/versions/: 0001_baseline.py  0002_extend_action_column.py
backend/app/: main.py
backend/app/api/: v1.py
backend/app/core/: celery_app.py  config.py  constants.py  context.py  database.py  deps.py  dict_cache.py  exceptions.py  logging.py  permissions.py  redis.py  response.py  security.py
backend/app/models/: __init__.py  assignment.py  base.py  data_dict.py  department.py  device.py  employee.py  operation_log.py  permission.py  role.py  role_permission.py  user.py  workstation.py
backend/app/repositories/: assignment_repo.py  base.py  data_dict_repo.py  department_repo.py  device_repo.py  (+6 more)
backend/scripts/: seed.py
backend/tests/: conftest.py  test_asset_scope.py  test_auth.py  test_celery_config.py  test_config.py  test_department_repo.py  test_departments.py  test_device_repo.py  test_devices.py  test_dicts.py  test_employee_repo.py  test_employees.py  test_health.py  test_import_export.py  test_migration.py  test_models.py  test_operation_logs.py  test_permissions.py  test_reports.py  test_repositories.py  test_resign.py  test_response.py  test_roles.py  test_scope_service.py  test_security.py  test_seed.py  test_task_service.py  test_users.py  test_utils.py  test_warranty_scan.py  test_workstation_repo.py  test_workstations.py
(+96 files in other folders)
