[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "ims-backend"
version = "0.1.0"
description = "Enterprise internal management system - backend"
requires-python = ">=3.11"
dependencies = [
    "fastapi>=0.110",
    "uvicorn[standard]>=0.29",
    "sqlalchemy>=2.0",
    "alembic>=1.13",
    "pymysql>=1.1",
    "redis>=5.0",
    "pydantic>=2.6",
    "pydantic-settings>=2.10",
    "pyjwt>=2.8",
    "passlib[bcrypt]>=1.7.4",
    "bcrypt>=4.0,<5.0",
    "uuid-utils>=0.7",
    "python-multipart>=0.0.9",
]

[project.optional-dependencies]
dev = ["pytest>=8.0", "httpx>=0.27", "ruff>=0.4"]

[tool.hatch.build.targets.wheel]
packages = ["app"]

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "-v"
filterwarnings = [
    "error",
    "ignore:Using `httpx`.*:Warning",
]
